...
      "comment" : "A window that displays the console log.",
      "isCommentAutoGenerated" : true
    },
    "Love / Unlove" : {

    },
    "Mini Player" : {
      "comment" : "A window that plays music.",
      "isCommentAutoGenerated" : true
    },
    "Music Sources…" : {

    },
...
    "View as" : {

    },
    "View third-party licence notices for open-source components used by Bòcan" : {

    },
    "Visualizer" : {
      "comment" : "A window that displays the visualizer.",
      "isCommentAutoGenerated" : true
    },
    "Whole-library totals: songs, albums, artists, and playback time" : {

    }
...
